add apt upgrade steps

--- a/roles/linecard_common/tasks/upgrade.yml
+++ b/roles/linecard_common/tasks/upgrade.yml
@@ -13,14 +13,21 @@
 
 - name: Verify current version
   command: cat /etc/lsb-release
+  register: old_release
+
+- name: Print Current Version
+  debug: 
+    msg: "{{ old_release.stdout }}"
 
 - name: Verify traffic is drained. This will take a moment...
   interface_stats:
 
-- name: Run Apt Upgrade 
-  apt: 
-    update_cache: yes
-    upgrade: yes
+- name: Run Apt Update 
+  command: apt-get -y update
+
+# Command module used to avoid installing Aptitude package, which Ansible relies on
+- name: Run Apt Upgrade
+  command: apt-get -y upgrade
 
 - name: Reboot!
   shell: sleep 2 && shutdown -r now "Ansible reboot triggered"
@@ -39,6 +46,11 @@
 
 - name: Verify upgraded version
   command: cat /etc/lsb-release
+  register: new_release
+
+- name: Print Upgraded Version
+  debug: 
+    msg: "{{ new_release.stdout }}"
 
 # This is mainly to let netd start
 - name: Give services time to start 
